<resources>
    <string name="app_name">Link Development</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Tony Roshdy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news_title">Title</string>
    <string name="news_author">Author</string>
    <string name="news_date">Date</string>
    <string name="title_newsmodel_list">News</string>
    <string name="title_newsmodel_detail">NewsModel Detail</string>
    <string name="explore">Explore</string>
    <string name="live_chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="e_magazine">E-Magazine</string>
    <string name="open_website">Open Website</string>
    <string name="news_description">Description</string>
    <string name="no_internet">No Internet Access</string>
</resources>
