<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space25"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_news_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space100"
        android:scaleType="fitXY"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txt_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space5"
        tools:text="@string/news_title" />

    <TextView
        android:id="@+id/txt_news_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space5"
        tools:text="@string/news_author" />

    <TextView
        android:id="@+id/txt_news_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/space5"
        tools:text="@string/news_date" />


    <TextView
        android:layout_marginTop="@dimen/space25"
        android:gravity="bottom"
        android:background="@color/colorGreyWhite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space5" />


</LinearLayout>
