<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/space100"
    android:padding="@dimen/space5">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/space70"
        android:layout_height="@dimen/space70"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:background="@drawable/profile"
        android:contentDescription="@string/nav_header_desc" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/space10">

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/nav_header_title"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/font12" />

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/txtName"
            android:layout_below="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font15" />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/space25"
        android:layout_height="@dimen/space25"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/arrow" />

</RelativeLayout>
